// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First React component test with Enzyme renders correctly 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <nav
      className="navbar-dark navbar navbar-expand-sm navbar-light"
    >
      <a
        className="navbar-brand"
        href="#home"
      >
        PDF 2 JPGs
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          className="mr-auto navbar-nav"
          onKeyDown={[Function]}
        >
          <a
            className="nav-link"
            data-rb-event-key="/"
            href="/"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Home
          </a>
          <div
            className="dropdown nav-item"
            onKeyDown={[Function]}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle nav-link"
              data-rb-event-key={null}
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Previous PDFs
            </a>
            <div
              aria-labelledby={null}
              className="dropdown-menu"
            />
          </div>
          <a
            className="nav-link"
            data-rb-event-key="/about"
            href="/about"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            About
          </a>
        </div>
      </div>
    </nav>
  </header>
  <div>
    <div>
      <div
        className="main-style"
      >
        <div
          className="container"
        >
          <div
            className="tight-container"
          >
            <div
              className="center heading-font"
            >
              Convert a PDF file to a set of optimized JPG images
            </div>
            <div
              className="mt2 sub-heading-font"
            >
              This free tool converts PDFs to JPGs. It shows thumbnails of each page so you can easily enlarge and download only the files you wish to download
            </div>
            <div
              className="mt2 sub-heading-font"
            >
              Click the 'Choose File' button and select a PDF file you wish to convert. Click 'Convert to JPG images' and wait for the conversion process to finish.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <input
        accept=".pdf"
        className="btn btn-success input-padding"
        onChange={[Function]}
        type="file"
        value=""
      />
      <button
        className="convert-button-padding btn btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Convert to JPG Images
      </button>
      <div>
        <img
          alt="upload video"
          className="image-style"
          src="/upload.gif"
        />
      </div>
      <div
        className="row"
      >
        <div
          className="center heading-font-plus col-12"
        >
          Features
        </div>
        <div
          className="mt2 col-md-4"
        >
          <h4>
            Download a ZIP Archive
          </h4>
          You can download each image individually by clicking on the download button below each image, or you can download a ZIP file containing all the images.
        </div>
        <div
          className="mt2 col-md-4"
        >
          <h4>
            Access your previously uploaded PDFs
          </h4>
          Previously uploaded PDFs are will be available to be viewed and downloaded again on the same computer. Images and PDFs and ZIP files are stored on the server for 30 days before they are erased.
        </div>
        <div
          className="mt2 col-md-4"
        >
          <h4>
            Full Size Image Viewer
          </h4>
          Click on the image to open the image full size. You'll be able to download, rotate or see an even bigger version of the image.
        </div>
        <div
          className="col-md-4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Previous uploads exist locally stored creates a screenshot for the pdf dropdown view for previously uploaded pdfs 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <nav
      className="navbar-dark navbar navbar-expand-sm navbar-light"
    >
      <a
        className="navbar-brand"
        href="#home"
      >
        PDF 2 JPGs
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          className="mr-auto navbar-nav"
          onKeyDown={[Function]}
        >
          <a
            className="nav-link"
            data-rb-event-key="/"
            href="/"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            Home
          </a>
          <div
            className="dropdown nav-item"
            onKeyDown={[Function]}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle nav-link"
              data-rb-event-key={null}
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Previous PDFs
            </a>
            <div
              aria-labelledby={null}
              className="dropdown-menu"
            >
              <a
                className="dropdown-item"
                href="/uploaded/0"
                onClick={[Function]}
                onKeyDown={[Function]}
                state={
                  Object {
                    "item": Object {
                      "numPages": 2,
                      "s3SafeFileName": "78559523template.pdf",
                      "uploadFileName": "template",
                    },
                  }
                }
              >
                template
              </a>
              <a
                className="dropdown-item"
                href="/uploaded/1"
                onClick={[Function]}
                onKeyDown={[Function]}
                state={
                  Object {
                    "item": Object {
                      "numPages": 242,
                      "s3SafeFileName": "78559523reactnative.pdf",
                      "uploadFileName": "reactnative",
                    },
                  }
                }
              >
                reactnative
              </a>
              <a
                className="dropdown-item"
                href="/uploaded/2"
                onClick={[Function]}
                onKeyDown={[Function]}
                state={
                  Object {
                    "item": Object {
                      "numPages": 2,
                      "s3SafeFileName": "78559523TrainTickets.pdf",
                      "uploadFileName": "TrainTickets",
                    },
                  }
                }
              >
                TrainTickets
              </a>
              <div
                className="dropdown-divider"
                role="separator"
              />
              <a
                className="dropdown-item"
                href="#"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
              >
                Drop Previous Uploads
              </a>
            </div>
          </div>
          <a
            className="nav-link"
            data-rb-event-key="/about"
            href="/about"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            About
          </a>
        </div>
      </div>
    </nav>
  </header>
  <div>
    <div>
      <div
        className="main-style"
      >
        <div
          className="container"
        >
          <div
            className="tight-container"
          >
            <div
              className="center heading-font"
            >
              Convert a PDF file to a set of optimized JPG images
            </div>
            <div
              className="mt2 sub-heading-font"
            >
              This free tool converts PDFs to JPGs. It shows thumbnails of each page so you can easily enlarge and download only the files you wish to download
            </div>
            <div
              className="mt2 sub-heading-font"
            >
              Click the 'Choose File' button and select a PDF file you wish to convert. Click 'Convert to JPG images' and wait for the conversion process to finish.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="container"
    >
      <input
        accept=".pdf"
        className="btn btn-success input-padding"
        onChange={[Function]}
        type="file"
        value=""
      />
      <button
        className="convert-button-padding btn btn-primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        Convert to JPG Images
      </button>
      <div>
        <img
          alt="upload video"
          className="image-style"
          src="/upload.gif"
        />
      </div>
      <div
        className="row"
      >
        <div
          className="center heading-font-plus col-12"
        >
          Features
        </div>
        <div
          className="mt2 col-md-4"
        >
          <h4>
            Download a ZIP Archive
          </h4>
          You can download each image individually by clicking on the download button below each image, or you can download a ZIP file containing all the images.
        </div>
        <div
          className="mt2 col-md-4"
        >
          <h4>
            Access your previously uploaded PDFs
          </h4>
          Previously uploaded PDFs are will be available to be viewed and downloaded again on the same computer. Images and PDFs and ZIP files are stored on the server for 30 days before they are erased.
        </div>
        <div
          className="mt2 col-md-4"
        >
          <h4>
            Full Size Image Viewer
          </h4>
          Click on the image to open the image full size. You'll be able to download, rotate or see an even bigger version of the image.
        </div>
        <div
          className="col-md-4"
        />
      </div>
    </div>
  </div>
</div>
`;
